@@ -1,3 +1,10 @@
+2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b9
+
+ * Fix: Aded icon for feature photo.
+
+ * Fix: Removed second (redundant) link to photoproperties in thumbnail view.
+   Thanks to floridave.
+
 2006-10-15 Jens Tkotz <jens@peino.de> 1.6-alpha2-svn-b8
 
  * Fix: Correct wrong filenames in 'Id' Keyword.
